<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:switchpref="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:title="@string/preferences" >

  <org.jraf.android.backport.switchwidget.SwitchPreference
        android:key="notificationsKey"
        android:title="@string/notifications"
        switchpref:summaryOff="@string/notifications_off"
        switchpref:summaryOn="@string/notifications_on" />
  
  <org.jraf.android.backport.switchwidget.SwitchPreference
        android:key="notificationsKey"
        android:title="@string/paperinhd"
        switchpref:summaryOff="@string/hd_off"
        switchpref:summaryOn="@string/hd_on" />
  
  <org.jraf.android.backport.switchwidget.SwitchPreference
        android:key="notificationsKey"
        android:title="@string/pdfondata"
        switchpref:summaryOff="@string/pdf_data_off"
        switchpref:summaryOn="@string/pdf_data_on" />
  
  <Preference
            android:title="@string/version"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/version" 
            android:focusableInTouchMode="false"
            android:clickable="false"
            android:summary="Version-1.0"
        	/>
  <Preference
            android:title="@string/feedback"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/feedback" 
            android:focusableInTouchMode="false"
            android:clickable="false"
            android:summary="Click to provide feedback"
        	/>
  
</PreferenceScreen>